--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@inrupt/eslint-config-base": "^0.2.0-alpha.1",
     "@inrupt/eslint-config-react": "^0.2.0-alpha.1",
+    "@solid/community-server": "https://github.com/woutslabbinck/community-server.git#feat/shape-support",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "babel-eslint": "^10.1.0",
@@ -55,6 +56,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.1.3",
+    "jsonld-streaming-parser": "^2.4.3",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   }
